--- a/port.html
+++ b/port.html
@@ -42,7 +42,7 @@
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="file/my.jpeg"><br>
+            <img src="my.jpeg"><br>
         </div>
         <div class="about-text">
             <h2>About<span> Me</span></h2>
@@ -183,14 +183,14 @@
                 <h2>Latest <span>Project</span></h2>
                 <div class="portfolio-content">
                     <div class="row">
-                        <img src="file/download.jpg">
+                        <img src="download.jpg">
                         <div class="layer">
                             <h5>Bus reservation Sysytem</h5>
                             <p>In backend I have done a project in the title of Bus reservation system by using java.</p>
                             <a href="#"><i class='bx bx-link-external' style="color:rgb(80, 160, 230);"></i></a>
                         </div><br><br><br>
                         <div class="row">
-                            <img src="file/download.jpg">
+                            <img src="download.jpg">
                             <div class="layer">
                                 <h5><br>portfolio website</h5>
                                 <p>In frontend I have done a project in the title of portfolio website. I create my own portfolio website, which is a responsive website</p>
