--- a/port.html
+++ b/port.html
@@ -190,7 +190,7 @@
                             <a href="#"><i class='bx bx-link-external' style="color:rgb(80, 160, 230);"></i></a>
                         </div><br><br><br>
                         <div class="row">
-                            <img src="download.jpg">
+                            <img src="down.jpg">
                             <div class="layer">
                                 <h5><br>portfolio website</h5>
                                 <p>In frontend I have done a project in the title of portfolio website. I create my own portfolio website, which is a responsive website</p>
@@ -206,7 +206,7 @@
         <div class="contact-text">
             <h2>Contact<span> Me</span></h2>
             <h4>Let's Work Together</h4>
-            <p> An energitic and young developer with good in leadership quality looking forward to use my skills in reputed organization like yours.I am a hardworker, team player. As a Full Stack Developer I am strong in html,css,javascript,react js, Mysql and java.Intrested in Web development,software development, Application development,UI/UX designing.</p>
+            <p> An energitic and young developer with good in leadership quality looking forward to use my skills in reputed organization like yours.I am a hardworker, team player. As a Full Stack Developer I am strong in html,css,javascript,react js, Mysql and java.Intrested in Web designing,software development.</p>
             <div class="contact-list">
                 <li><i class='bx bxs-send'></i>aarthikumaravel123@gmail.com</li>
                 <li><i class='bx bxs-phone'></i>9360111277</li>
