--- a/port.html
+++ b/port.html
@@ -42,7 +42,7 @@
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src="my.jpeg"><br>
+            <img src="C:\Users\aarth\Downloads"><br>
         </div>
         <div class="about-text">
             <h2>About<span> Me</span></h2>
