--- a/port.html
+++ b/port.html
@@ -42,7 +42,7 @@
     </section>
     <section class="about" id="about">
         <div class="about-img">
-            <img src=""C:\Users\aarth\Downloads\WhatsApp Image 2024-08-12 at 12.06.56 AM.jpeg""><br>
+            <img src="WhatsApp Image 2024-08-12 at 12.06.56 AM.jpeg"><br>
         </div>
         <div class="about-text">
             <h2>About<span> Me</span></h2>
@@ -190,7 +190,7 @@
                             <a href="#"><i class='bx bx-link-external' style="color:rgb(80, 160, 230);"></i></a>
                         </div><br><br><br>
                         <div class="row">
-                            <img src="C:\Users\aarth\Downloads">
+                            <img src="down.jpg">
                             <div class="layer">
                                 <h5><br>portfolio website</h5>
                                 <p>In frontend I have done a project in the title of portfolio website. I create my own portfolio website, which is a responsive website</p>
